# rexpect-examples

./: Cargo.toml  Makefile  README.md
clap2/: Cargo.toml  Makefile
clap4/: Cargo.toml  LICENSE  Makefile  README.md
clap4/examples/: 03_04_subcommands.rs  cargo-example-derive.rs  cargo-example.rs  demo.rs  escaped-positional-derive.rs  escaped-positional.rs  find.rs  git-derive.rs  git.rs  multicall-busybox.rs  multicall-hostname.rs  pacman.rs  repl.rs  typed-derive.rs
clap4/tests/: cli.rs
