[package]
name = "clap4-examples"
version = "0.1.0"
authors = ["https://github.com/learnrust/rexpect-examples"]
description = "clap 4 examples"
license     = "MIT"
homepage    = "https://github.com/learnrust/rexpect-examples/clap4"
readme      = "README.md"
categories  = ["command-line-utilities" ]
keywords    = ["clap"]
exclude     = ["*.yml","*.dot"]

[dependencies]
clap = {version = "4.0.17", features = ["derive", "env","cargo"]}

bitflags = "1.2"
unicase = { version = "2.6", optional = true }
strsim = { version = "0.10",  optional = true }
atty = { version = "0.2",  optional = true }
termcolor = { version = "1.1.1", optional = true }
terminal_size = { version = "0.2.1", optional = true }
backtrace = { version = "0.3", optional = true }
unicode-width = { version = "0.1.9", optional = true }
once_cell = { version = "1.12.0", optional = true }

trybuild = "1.0.65"
rustversion = "1"
# Cutting out `filesystem` feature
trycmd = { version = "0.13", default-features = false, features = ["color-auto", "diff", "examples"] }
humantime = "2"
snapbox = "0.4"
shlex = "1.1.0"
static_assertions = "1.1.0"
unic-emoji-char = "0.9.0"